用户注册登录，连接，私人聊天互发消息调通

--- a/rim-route/src/main/resources/i18n/messages_zh_CN.properties
+++ b/rim-route/src/main/resources/i18n/messages_zh_CN.properties
@@ -6,3 +6,5 @@ common.operFail=操作失败
 user.error.exist=用户已存在
 user.error.notexist=用户不存在
 user.error.password=密码错误
+user.error.offline=用户已离线请重新登录
+sendmsg.error.token=token校验失败
