客户端连接服务端

--- a/rim-route/src/main/resources/i18n/messages_zh_CN.properties
+++ b/rim-route/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,10 +1,10 @@
-#通用操作
-common.operSucc=操作成功
-common.operFail=操作失败
+#\u901A\u7528\u64CD\u4F5C
+common.operSucc=\u64CD\u4F5C\u6210\u529F
+common.operFail=\u64CD\u4F5C\u5931\u8D25
 
-#用户
-user.error.exist=用户已存在
-user.error.notexist=用户不存在
-user.error.password=密码错误
-user.error.offline=用户已离线请重新登录
-sendmsg.error.token=token校验失败
+#\u7528\u6237
+user.error.exist=\u7528\u6237\u5DF2\u5B58\u5728
+user.error.notexist=\u7528\u6237\u4E0D\u5B58\u5728
+user.error.password=\u5BC6\u7801\u9519\u8BEF
+user.error.offline=\u7528\u6237\u5DF2\u79BB\u7EBF\u8BF7\u91CD\u65B0\u767B\u5F55
+sendmsg.error.token=token\u6821\u9A8C\u5931\u8D25
